--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -25,3 +25,9 @@ target_link_libraries(${this} PUBLIC
 # )
 
 add_test(${this} Exempletest)
+
+if(CMAKE_TESTING)
+        add_executable(my_test example-test.cpp)
+        target_link_libraries(my_test PRIVATE GTest::gtest_main)
+        include(GoogleTest)
+        gtest_discover_tests(my_test)
